tests-integration/fixtures/checking/1772564820_derive_eq_missing_instance/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 39
expression: report
---
Terms
MkNoEq :: NoEq
MkBox :: NoEq -> Box

Types
NoEq :: Type
Box :: Type

Derived
derive Eq Box

Roles
NoEq = []
Box = []

Diagnostics
error[NoInstanceFound]: No instance found for: Eq NoEq
  --> 9:1..9:23
  |
9 | derive instance Eq Box
  | ^~~~~~~~~~~~~~~~~~~~~~
